--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,11 @@
+<!doctype html>
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>CSS3 动画</title>
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="renderer" content="webkit">
 	<link rel="stylesheet" href="../lib/css/animate.css">
 	<link rel="stylesheet" href="../lib/css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
